--- a/src/langs/en.json
+++ b/src/langs/en.json
@@ -126,7 +126,7 @@
         "ambassador": {
             "line1": "Compete in new Ambassador Challenges every week hosted by different athletes",
             "line2": "Chance to win an NFT of Ambassador's Challenge video + additional prizes.",
-            "line3": "Stay tune for more details."
+            "line3": "Stay tuned for more details."
         },
         "roadmap": {
             "socials": "Join our Discord and follow our Twitter to get access to the latest announcements and enter raffles to earn prizes from our Ambassadors",
