--- a/src/langs/en.json
+++ b/src/langs/en.json
@@ -12,13 +12,13 @@
             "title2":"Earning Potential",
             "p2": "Our carefully crafted royalties system and stablecoin Vote token will allow both creators and consumers of content to earn money. Creators can earn by winning challenges and viewers can earn by voting.",
             "title3":"NFT Collectibles",
-            "p3": "Collect unique moments from talented creators. Winning challenge videos have the opportunity to be minted into NFT collectibles that can be traded on our NFT marketplace.",
-            "title4":"NFT Marketplace",
-            "p4": "Buy and Sell winning challenge moments on our NFT Marketplace to increase your collection. Royalties from collectible sales are distributed to the video creator and voters."
+            "p3": "Videos that win have the opportunity to be minted into NFT collectibles that can be traded on our Marketplace or any of the other top NFT marketplaces. Tokenizing challenge videos enables users to fully own and easily monetize their content, and each one is backed up forever using blockchain technology.",
+            "title4":"Ambassador Program",
+            "p4": "Have the opportunity to try and out-perform your favourite pros and earn prizes doing it. Every week top athletes from different domains submit a challenge to the community to try and replicate one of their iconic moves. Submit your best attempt to get entered into a raffle and earn prizes."
         },
         "highlighted": {
             "company": "AllSkills",
-            "start": "is powered by cryptocurrency, using future-proof blockchain & smart contract technology to",
+            "start": "uses future-proof blockchain & smart contract technology to",
             "highlight1": "connect talented people & audiences",
             "middle": ", and foster skill development through competition all while providing",
             "highlight2":"incentives for everyone involved."
