--- a/src/langs/en.json
+++ b/src/langs/en.json
@@ -10,7 +10,7 @@
             "title1":"Skills Competition",
             "p1":"Using our platform, creators can challenge others using a video showcasing their talents. Challenge winners are decided by a community vote and all votes enter a reward pool that gets distrubuted to the winning creator and all those who voted for it to win.",
             "title2":"Earning Potential",
-            "p2": "Our carefully crafted royalties system and stablecoin Vote token will allow both creators and consumers of content to earn money. Creators can earn by winning challenges and viewers can earn by voting.",
+            "p2": "Our carefully crafted royalties system and Vote Token will allow both creators and consumers of content to earn money. Creators can earn by winning challenges and viewers can earn by voting.",
             "title3":"NFT Collectibles",
             "p3": "Videos that win have the opportunity to be minted into NFT collectibles that can be traded on our Marketplace or any of the other top NFT marketplaces. Tokenizing challenge videos enables users to fully own and easily monetize their content, and each one is backed up forever using blockchain technology.",
             "title4":"Ambassador Program",
